# reducto

./: MANIFEST.in  Makefile  README.md  noxfile.py  pyproject.toml  readme_badges.py  reducto_report.json  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: changelog.rst  conf.py  developer_guide.rst  index.rst
reducto/: __init__.py  __version__.py  _version.py  api.py  cli.py  items.py  line.pyx  package.py  parser.py  reducto.py  report.py  reports.py  src.py
reducto/_ext/: _line.cpp  _line.h  _pyfile.cpp  _pyfile.h  line_wrap.cpp  line_wrap.pyx  pyfile_wrap.cpp  pyfile_wrap.pyx
reducto/ext/: _line.cpp  _line.h  line.cpp  line.h  line_wrap.cpp  line_wrap.pyx  pyfile.cpp  pyfile.h
templates/: readme_template.md
tests/: conftest.py  src.py  test_api.py  test_items.py  test_package.py  test_parser.py  test_reducto.py  test_reports.py  test_src.py
tests/data/: example.py  say_hello.py
