[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "reducto"
author = "agustin"
author-email = "agustin.piqueres@gmail.com"
home-page = "https://github.com/plaguss/reducto"
requires-python=">=3.8"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
test = [
    "pytest==6.2.3",
    "pytest-cov==2.11.1"
]
doc = ["sphinx"]
