[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "reducto"
author = "Agustín Piqueres"
author-email = "agustin.piqueres@gmail.com"
home-page = "https://github.com/plaguss/reducto"
requires-python=">=3.8"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

[tool.flit.metadata.requires-extra]
test = [
    "pytest==6.2.3",
    "pytest-cov==2.11.1",
    "mypy==0.910"
]
doc = ["sphinx"]

[tool.flit.scripts]
reducto = "reducto:main"